Changelog
=========

3.2 (unreleased)
----------------

- Rotation of photos based upon EXIF data if available, so they get displayed correctly (#122).
- Misc doc tweaks.

3.1.1 (2014-11-13)
------------------

- The 'zip upload' functionality did not work (the required html templates
  were not included into the released package).
- Updated French translation.

3.1 (2014-11-03)
----------------

- The 'zip upload' functionality has been moved to a custom admin page.
- Refactor `add_accessor_methods` to be lazily applied (see #110).
- Updated German translation.
- Several improvements to the sample Bootstrap templates.
- Support CACHEDIR.TAG spec issue #89
- Fix issue #99 by adding 10 extra char to photo title(max gallery size up to 999999999 images)
- Sitemap.xml was not aware of Sites (#104).
- In python 3, gallery upload would crash if uploaded file was not a zip file (#106).

3.0.2 (2014-09-23)
------------------

- Updated django-sortedm2m to an official release.
- Updated Spanish translation.
- Updated Bootstrap version used in example project.

3.0.1 (2014-09-16)
------------------

- Missed out some templates from the released package.

3.0 (2014-09-15)
----------------

Upgrade notes:

WARNING: IF YOU'RE USING POSTGRESQL AS A DATABASE & DJANGO 1.7, THE LATEST RELEASE OF
DJANGO-SORTEDM2M HAS A BUG. INSTEAD, YOU'LL HAVE TO MANUALLY INSTALL:

pip install -e git://github.com/richardbarran/django-sortedm2m.git@9a609a1c6b790a40a016e4ceadedbb6dd6b92010#egg=sortedm2m



THE FOLLOWING CHANGES BREAK BACKWARDS COMPATIBILITY!

- Django 1.7 comes with a new migrations framework which replaces South - 
  if you continue to use Django 1.6, you'll need to add new settings. Please
  refer in the docs to the installation instructions.
  If you're upgrading to Django 1.7 - upgrade Photologue first, THEN upgrade
  Django.
- The Twitter-Bootstrap templates - previously in 'contrib' - become the default; the
  previous templates are moved to 'contrib'.